--- a/capitoli/cap7.tex
+++ b/capitoli/cap7.tex
@@ -412,6 +412,6 @@ La gestione di dispositivi multimarca nella domotica residenziale rappresenta un
 
 Le piattaforme open source come Home Assistant hanno dimostrato che è possibile far dialogare dispositivi di qualsiasi marca, mentre standard come Matter promettono di rendere l'interoperabilità nativa e trasparente. Le soluzioni native degli smartphone, pur con i loro limiti, hanno reso la domotica accessibile a milioni di utenti non tecnici.
 
-I casi studio presentati dimostrano che non esiste una soluzione unica: ogni implementazione deve essere calibrata sulle specifiche esigenze, competenze e vincoli. Che si tratti di un appartamento high-tech per un professionista, una casa famiglia con esigenze diverse, o un retrofit rispettoso di vincoli architettonici, la chiave sta nella pianificazione attenta e nell'implementazione graduale.
+Non esiste una soluzione unica: ogni implementazione deve essere calibrata sulle specifiche esigenze, competenze e vincoli. Che si tratti di un appartamento high-tech per un professionista, una casa famiglia con esigenze diverse, o un retrofit rispettoso di vincoli architettonici, la chiave sta nella pianificazione attenta e nell'implementazione graduale.
 
 Il futuro della gestione multimarca sarà caratterizzato da maggiore intelligenza artificiale, standard più comprensivi e convergenza con altri domini tecnologici. Ma il principio fondamentale rimarrà invariato: la tecnologia deve adattarsi alle persone, non viceversa. Solo con questo approccio human-centric la promessa della casa intelligente potrà realizzarsi pienamente per tutti.
